2.7.6.BM.2 more show stopper bugs fixes, updated example with a nice theme Resharper 6 Javascript realtime analyzer: fix missing ; duplicate var and inconsistent returns         Included jamesspencer patch to allow the use of non-(multi)select inputs         funCall can now return a value         changed the browser_msie test to $.support         options.filter_selected missing         included changed by zack: item_deleting class, adding hover support to list items, adding click selection support         fix LEFT/RIGHT navigation when no item is selected (will do normal cursor navigation inside text)         renamed event to e to prevent global "event" variable collision on ie         more regexp quoting         fix broken keep_prompt_after_choose when adding a tag by clicking on it         fix focus on input after a selection was not working as expected

--- a/exampleNice/style.css
+++ b/exampleNice/style.css
@@ -2,8 +2,9 @@
 ul.holder { margin: 0; overflow: hidden; height: auto !important; height: 1%; padding: 4px 5px 0; background-color: #fff; border: 1px solid #ccc;display: inline-block;vertical-align: top; }
 *:first-child+html ul.holder { padding-bottom: 2px; } * html ul.holder { padding-bottom: 2px; } /* ie7 and below */
 ul.holder li { float: left; list-style-type: none; margin: 0 5px 4px 0; white-space:nowrap;}
-ul.holder li.bit-box, ul.holder li.bit-input input { font: 11px "Lucida Grande", "Verdana"; }
-ul.holder li.bit-box { -moz-border-radius: 6px; -webkit-border-radius: 6px; border-radius: 6px; border: 1px solid #CAD8F3; background: #DEE7F8; padding: 1px 5px 2px; }
+ul.holder li.bit-box, ul.holder li.bit-input input, ul.holder li.bit-box-deleting { font: 11px "Lucida Grande", "Verdana"; }
+ul.holder li.bit-box, ul.holder li.bit-box-deleting { -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; border: 1px solid #CAD8F3; background: #DEE7F8; padding: 1px 5px 2px; }
+ul.holder li.bit-box-deleting {background: inherit; }
 ul.holder li.bit-box-focus { border-color: #598BEC; background: #598BEC; color: #fff; }
 ul.holder li.bit-input input { width: auto; overflow:visible; margin: 0; border: 0px; outline: 0; padding: 3px 0px 2px; } /* no left/right padding here please */
 ul.holder li.bit-input input.smallinput { width: 20px; }
@@ -39,7 +40,7 @@ ul.holder li.bit-box-focus a.closebutton, ul.holder li.bit-box-focus a.closebutt
 .softline { display: none; position: absolute; width: 512px; }
 .softline .default { padding: 5px 7px; border: 1px solid #ccc; border-width: 0 1px 1px;font-family:"Lucida Grande","Verdana"; font-size:11px; }
 .softline ul { display: none; margin: 0; padding: 0; overflow: auto; display: inline; }
-.softline ul li { display: inline-block; padding: 3px 9px; cursor: pointer; margin: 0; list-style-type: none; border: 1px solid #ccc; border-width: 0 1px 1px; font: 11px "Lucida Grande", "Verdana";background-color: #fcddc3; border-radius: 6px;margin: 3px 3px 0 0; }
+.softline ul li { display: inline-block; padding: 3px 9px; cursor: pointer; margin: 0; list-style-type: none; border: 1px solid #ccc; border-width: 0 1px 1px; font: 11px "Lucida Grande", "Verdana";background-color: #fcddc3; border-radius: 4px;margin: 3px 3px 0 0; }
 .softline ul li em { font-weight: bold; font-style: normal; background: #ccc; }
 .softline ul li.auto-focus { background: #4173CC; color: #fff; }
 .softline ul li.auto-focus em { background: none; }
